fix spacing

--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -9,9 +9,13 @@
   align-items: center;
 }
 
+.form-label {
+  padding-left: 0.80rem;
+}
+
 .form-label,
 .form-select {
-  margin-right: 1rem;
+  margin-right: 0.80rem;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
 }
@@ -44,7 +48,7 @@
 }
 
 .cell {
-  padding: 0 2rem 0.5rem;
+  padding: 0 0.75rem 0.5rem;
 }
 
 th {
